--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,5 +6,11 @@
   <%= link_to "Edit this post", edit_post_path(@post) %> |
   <%= link_to "Back to posts", posts_path %>
 
-  <%= button_to "Destroy this post", @post, method: :delete, form: { data: { turbo_confirm: "Are you sure?" } } %>
+  <%= button_to "Destroy this post", @post, method: :delete, form: {
+    data: {
+      turbo_confirm: "Are you sure?",
+      turbo_confirm_text: @post.title,
+      turbo_confirm_description: "This action cannot be undone. Enter the post title to confirm."
+    }
+  } %>
 </div>
